--- a/public/style.css
+++ b/public/style.css
@@ -129,3 +129,11 @@ body {
     padding: 5px;
     border-top: 1px solid #eee;
 }
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+    transform: translateY(95vh);
+}
